07_retirement/grade.txt
Grading at Mon Aug 10 01:21:25 UTC 2020
Attempting to compile retirement.c
retirement.c:12:9: error: expected ‘;’, identifier or ‘(’ before ‘struct’
 typedef struct _retire_info retire_info;
         ^
retirement.c:15:47: error: expected declaration specifiers or ‘...’ before ‘retire_info’
 void retirement(int startAge, double initial, retire_info working,
                                               ^
retirement.c:16:3: error: expected declaration specifiers or ‘...’ before ‘retire_info’
   retire_info retired) {
   ^
retirement.c: In function ‘main’:
retirement.c:39:3: error: statement with no effect [-Werror=unused-value]
   retire_info working = { 489, 1000, 0.045 };
   ^
retirement.c:39:15: error: expected ‘;’ before ‘working’
   retire_info working = { 489, 1000, 0.045 };
               ^
retirement.c:40:3: error: statement with no effect [-Werror=unused-value]
   retire_info retired = { 384, -4000, 0.01 };
   ^
retirement.c:40:15: error: expected ‘;’ before ‘retired’
   retire_info retired = { 384, -4000, 0.01 };
               ^
retirement.c:41:3: error: implicit declaration of function ‘retirement’ [-Werror=implicit-function-declaration]
   retirement(327, 21345, working, retired);
   ^
retirement.c:41:26: error: ‘working’ undeclared (first use in this function)
   retirement(327, 21345, working, retired);
                          ^
retirement.c:41:26: note: each undeclared identifier is reported only once for each function it appears in
retirement.c:41:35: error: ‘retired’ undeclared (first use in this function)
   retirement(327, 21345, working, retired);
                                   ^
cc1: all warnings being treated as errors
The code did not compile!

Overall Grade: F
